--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: Computerstystems enginee
+  uni: Instituto Politécnico Nacional ESCOM
+  year: 2017 &mdash; 2021
   awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+    #- award: 
+ # summary: If you had any meaningful roles at college, feel free to write about them here
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: Programming Technician
+  uni: CBTIs 83
+  year: 2016
+  award: Centro de Bachillerato Tecnológico Industrial y de Servicios No. 83
+ # summary: You can choose to have either a single or multiple awards
